fix sidebar collapse bug

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -105,14 +105,24 @@ a.list-group-item {
 }
 
 #tool-bar {
-    position: fixed;
-    top: 0;
-    right: 0;
+    position: relative;
+	width: 100%;
+	margin: 0;
+}
+
+#item-info {
+	position: relative;
+	width: 100%;
+	height: 100%;
 }
 
 #content-area {
     position: fixed;
-    right: 0;
+	height: 100%;
+	background: -webkit-linear-gradient(left, silver , #222222);
+	background: -o-linear-gradient(right, silver, #222222);
+	background: -moz-linear-gradient(right, silver, #222222);
+	background: linear-gradient(to right, silver, #222222);
     overflow: auto;
 }
 
